--- a/WIU 4 the Win!!.vcxproj
+++ b/WIU 4 the Win!!.vcxproj
@@ -127,7 +127,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Equipment.cpp" />
+    <ClCompile Include="location.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="scene.cpp" />
     <ClCompile Include="WIU 4 the Win!!.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Entity.h" />
+    <ClInclude Include="Equipment.h" />
+    <ClInclude Include="location.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="scene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
