--- a/WIU 4 the Win!!.vcxproj.filters
+++ b/WIU 4 the Win!!.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Npc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AttackGame.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="location.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Npc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AttackGame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
