--- a/WIU 4 the Win!!.vcxproj
+++ b/WIU 4 the Win!!.vcxproj
@@ -127,21 +127,27 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Dialogue.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Equipment.cpp" />
-    <ClCompile Include="location.cpp" />
-    <ClCompile Include="Npc.cpp" />
+    <ClCompile Include="Location.cpp" />
+    <ClCompile Include="Matrix.cpp" />
+    <ClCompile Include="NPC.cpp" />
     <ClCompile Include="Player.cpp" />
-    <ClCompile Include="scene.cpp" />
+    <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Utility.cpp" />
     <ClCompile Include="WIU 4 the Win!!.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Dialogue.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Equipment.h" />
-    <ClInclude Include="location.h" />
-    <ClInclude Include="Npc.h" />
+    <ClInclude Include="Location.h" />
+    <ClInclude Include="Matrix.h" />
+    <ClInclude Include="NPC.h" />
     <ClInclude Include="Player.h" />
-    <ClInclude Include="scene.h" />
+    <ClInclude Include="Map.h" />
+    <ClInclude Include="Utility.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
