--- a/WIU 4 the Win!!.vcxproj
+++ b/WIU 4 the Win!!.vcxproj
@@ -127,14 +127,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AttackGame.cpp" />
     <ClCompile Include="Clue.cpp" />
     <ClCompile Include="CluePuzzle.cpp" />
     <ClCompile Include="ConclusiveClue.cpp" />
     <ClCompile Include="Dialogue.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Equipment.cpp" />
+    <ClCompile Include="inventory.cpp" />
+    <ClCompile Include="Item.cpp" />
     <ClCompile Include="Journal.cpp" />
-    <ClCompile Include="Location.cpp" />
+    <ClCompile Include="Main_character.cpp" />
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="NPC.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -144,14 +147,17 @@
     <ClCompile Include="WIU 4 the Win!!.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AttackGame.h" />
     <ClInclude Include="Clue.h" />
     <ClInclude Include="CluePuzzle.h" />
     <ClInclude Include="ConclusiveClue.h" />
     <ClInclude Include="Dialogue.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Equipment.h" />
+    <ClInclude Include="inventory.h" />
+    <ClInclude Include="Item.h" />
     <ClInclude Include="Journal.h" />
-    <ClInclude Include="Location.h" />
+    <ClInclude Include="Main_character.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="NPC.h" />
     <ClInclude Include="Player.h" />
