--- a/WIU 4 the Win!!.vcxproj
+++ b/WIU 4 the Win!!.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="CluePuzzle.cpp" />
     <ClCompile Include="ConclusiveClue.cpp" />
     <ClCompile Include="Dialogue.cpp" />
+    <ClCompile Include="Dodge.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Equipment.cpp" />
     <ClCompile Include="inventory.cpp" />
@@ -152,6 +153,7 @@
     <ClInclude Include="CluePuzzle.h" />
     <ClInclude Include="ConclusiveClue.h" />
     <ClInclude Include="Dialogue.h" />
+    <ClInclude Include="Dodge.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Equipment.h" />
     <ClInclude Include="inventory.h" />
