--- a/WIU 4 the Win!!.vcxproj
+++ b/WIU 4 the Win!!.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="Clue.cpp" />
     <ClCompile Include="CluePuzzle.cpp" />
     <ClCompile Include="ConclusiveClue.cpp" />
+    <ClCompile Include="Cutscene.cpp" />
     <ClCompile Include="Dialogue.cpp" />
     <ClCompile Include="Dodge.cpp" />
     <ClCompile Include="Entity.cpp" />
@@ -152,6 +153,7 @@
     <ClInclude Include="Clue.h" />
     <ClInclude Include="CluePuzzle.h" />
     <ClInclude Include="ConclusiveClue.h" />
+    <ClInclude Include="Cutscene.h" />
     <ClInclude Include="Dialogue.h" />
     <ClInclude Include="Dodge.h" />
     <ClInclude Include="Entity.h" />
