--- a/WIU 4 the Win!!.vcxproj
+++ b/WIU 4 the Win!!.vcxproj
@@ -141,6 +141,8 @@
     <ClCompile Include="Journal.cpp" />
     <ClCompile Include="Main_character.cpp" />
     <ClCompile Include="Matrix.cpp" />
+    <ClCompile Include="Node.cpp" />
+    <ClCompile Include="NodeTree.cpp" />
     <ClCompile Include="NPC.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Map.cpp" />
@@ -163,6 +165,8 @@
     <ClInclude Include="Journal.h" />
     <ClInclude Include="Main_character.h" />
     <ClInclude Include="Matrix.h" />
+    <ClInclude Include="Node.h" />
+    <ClInclude Include="NodeTree.h" />
     <ClInclude Include="NPC.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Map.h" />
