--- a/WIU 4 the Win!!.vcxproj
+++ b/WIU 4 the Win!!.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="NPC.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Shop.cpp" />
     <ClCompile Include="SpecialNPC.cpp" />
     <ClCompile Include="Utility.cpp" />
     <ClCompile Include="WIU 4 the Win!!.cpp" />
@@ -170,6 +171,7 @@
     <ClInclude Include="NPC.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Map.h" />
+    <ClInclude Include="Shop.h" />
     <ClInclude Include="SpecialNPC.h" />
     <ClInclude Include="Utility.h" />
   </ItemGroup>
